# opensesame-plugin-example-evt

./: pyproject.toml  readme.md  setup.py
opensesame_plugins/example/: __init__.py
opensesame_plugins/example/example_plugin/: __init__.py  example_plugin.py
opensesame_plugins/example/example_plugin_evt/: __init__.py  example_plugin_evt.py
opensesame_plugins/example_plugin/: example_plugin.py
