[tool.poetry]
name = "opensesame-plugin-example-evt"
version = "0.0.1"
description = "An example plugin for OpenSesame and the use of EVT hardware"
authors = ["Sebastiaan Mathôt <s.mathot@cogsci.nl>", "Martin Stokroos <m.stokroos@rug.nl>"]
readme = "readme.md"
packages = [
    {include = "opensesame_plugins"},
]

[tool.poetry.dependencies]
python = ">= 3.7"
opensesame-core = ">= 4.0.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
